# libmotioncapture

./: .gitignore  .gitmodules  CMake.cmake  CMakeLists.txt  LICENSE  README.md  ROS.cmake  package.xml
.github/workflows/: cmake.yml
externalDependencies/nnBuild/: CMakeCache.txt  Makefile  cmake_install.cmake
externalDependencies/nnBuild/include/: Makefile  cmake_install.cmake
externalDependencies/nnBuild/include/NatNetLinux/: Makefile  cmake_install.cmake
externalDependencies/nnBuild/src/: Makefile  cmake_install.cmake
include/libmotioncapture/: motioncapture.h  optitrack.h  phasespace.h  qualisys.h  testmocap.h  vicon.h  vrpn.h
src/: motioncapture.cpp  optitrack.cpp  phasespace.cpp  qualisys.cpp  testmocap.cpp  vicon.cpp  vrpn.cpp
