<?xml version="1.0"?>
<package>
  <name>libmotioncapture</name>
  <version>0.0.1</version>
  <description>libmotioncapture</description>

  <maintainer email="whoenig@usc.edu">Wolfgang Hoenig</maintainer>

  <license>MIT</license>

  <author email="whoenig@usc.edu">Wolfgang Hoenig</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl</build_depend>
  <run_depend>pcl</run_depend>
</package>
